20000519-23:50 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
 *makefile.bc
  makefile.vc
  source/lang/makefile
  +Added new language modules
  +source/lang/msgcsiso.c
    *Language module for CZECH
  *source/lang/msgcs852.c
   source/lang/msgcskam.c
     *Updated

20000519-15:40 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * source/compiler/hbpcode.c
     + Minor correction in hb_compStrongType()

20000519-15:28 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * include/hbcomp.h
     + Added member pParamClasses to COMDECLARED
     * Changed hb_comp_szClass to hb_comp_szFromClass

   * source/compiler/harbour.y
     * Changed hb_comp_szClass to hb_comp_szFromClass

   * source/compiler/harbour.c
     + Added support for declared parameters of Functions/Methods AS Object FROM CLASS ...

   * source/compiler/hbpcode.c
     + Added Strong Type checking for declared parameters of Functions/Methods AS Object FROM CLASS ...

   * tests/testwarn.prg
     + Added code to demonstrate warnings for declared parameters of Functions/Methods AS Object FROM CLASS ...

20000519-10:17 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * source/compiler/harbour.y
   * source/compiler/harbour.c
   * source/compiler/hbpcode.c
     + Added support for AS Array Of Objects FROM CLASS ClassName syntax and type checking.

   * tests/testwarn.prg
     + Added code to demonstrate syntax and warnings for AS Array Of Objects FROM CLASS ClassName syntax and type checking.

20000519-02:05 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * include/hbcomp.h
     ! Consolidated COMDECLARED and COMMETHOD into COMDECLARED
     + Added member pClass to COMDECLARED
     + Added member pLast to COMCLASS

   * source/compiler/harbour.y
     + Added support for Methods/Datas of type Object of a declared Class.

   * source/compiler/harbour.c
     ! Fixed bug in hb_compMethodAdd()

   * source/compiler/hbpcode.c
     + Added Strong Type Checking to Objects syntax.

   * include/hberrors.h