@@ -1,3 +1,13 @@
+20000520-14:45 GMT+1 Ryszard Glab <rglab@imid.med.pl>
+
+    *source/rtl/gtcrs/gtcrs.c
+	* fixed hb_gt_SetAttribute() to work with plain curses library
+	(thanks to Marek Paliwoda)
+	
+    *source/rtl/gtcrs/kbdcrs.c
+    *source/rtl/gtcrs/mousecrs.c
+	* fixed a module description
+    
 20000519-23:50 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
  *makefile.bc
   makefile.vc
